# ROS-Package-Py-Template

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitlab-ci.yml  CMakeList.txt  CMakeLists.txt  README.md  package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/launch/: example.launch
{{cookiecutter.project_slug}}/scripts/: {{ cookiecutter.project_slug }}_ros_node  {{ cookiecutter.project_slug }}_ros_node.py
{{cookiecutter.project_slug}}/src/: {{ cookiecutter.project_slug }}_ros.py  {{ cookiecutter.project_slug }}_ros_node.py
{{cookiecutter.project_slug}}/src/{{ cookiecutter.project_slug }}/: {{ cookiecutter.project_slug }}.py  {{ cookiecutter.project_slug }}_ros.py  {{ cookiecutter.project_slug }}_ros_node.py
{{cookiecutter.project_slug}}/test/: test_{{ cookiecutter.project_slug }}.py
